package commode;

public class Apple extends MyElement{
    @Override
    public void eat() {
        System.out.println("ƻ");
    }
}