package commode;

public class Banana extends MyElement{
    @Override
    public void eat() {
        System.out.println("㽶");
    }
}