package commode;

public class Pear extends MyElement{
    @Override
    public void eat() {
        System.out.println("");
    }
}
